--- a/src/main/resources/templates/indexresource.html
+++ b/src/main/resources/templates/indexresource.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thymeleaf Dynamic Content Page 1</title>
 </head>
+
 <body>
-    <h1>Welcome to My Frist Thymeleaf page</h1>
+    <h1>Welcome to My First Thymeleaf page</h1>
+    <h2>The current time is <span data-th-text="${currTime}"></span></h2>
+
+    <div data-th-if="${currHour le 12}">
+        Good Morning!
+    </div>
+    <div data-th-unless="${currHour le 12}">
+        Good Afternoon!
+    </div>
+
 </body>
+
 </html>
