--- a/src/main/resources/templates/workshop.html
+++ b/src/main/resources/templates/workshop.html
@@ -13,10 +13,10 @@
     <br>
     <h2>How many numbers do you wish to generate?</h2>
 
-    <form methd="POST" action="processNumber">
+    <form method="POST" action="processNumber">
         Enter a number between 1 and 20 (inclusive):
-        <input type="number" min="1" max="20" name="InputNumber">
-        <input type="submit" value="Submit">
+        <input type="number" min="1" max="20" name="inputNumber"/>
+        <input type="submit" value="Submit"/>
     </form>
 
 </body>
